Basic UIKit support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -526,6 +526,9 @@ endif()
 if(XRT_HAVE_WAYLAND)
 	set(VK_USE_PLATFORM_WAYLAND_KHR TRUE)
 endif()
+if(XRT_HAVE_APPLE)
+	set(VK_USE_PLATFORM_METAL_EXT TRUE)
+endif()
 if(ANDROID)
 	set(VK_USE_PLATFORM_ANDROID_KHR TRUE)
 endif()
