--- a/src/xrt/compositor/CMakeLists.txt
+++ b/src/xrt/compositor/CMakeLists.txt
@@ -231,6 +231,9 @@ if(XRT_MODULE_COMPOSITOR_MAIN)
 		target_sources(comp_main PRIVATE main/comp_window_peek.c)
 		target_link_libraries(comp_main PRIVATE SDL2::SDL2)
 	endif()
+	if(XRT_HAVE_APPLE)
+		target_sources(comp_main PRIVATE main/comp_window_uikit.m)
+	endif()
 	if(WIN32)
 		target_sources(comp_main PRIVATE main/comp_window_mswin.c)
 	endif()
